Audio is not played from an audio element when the srcObject object has unstarted video tracks https://bugs.webkit.org/show_bug.cgi?id=207041 <rdar://problem/59084745>

Reviewed by Eric Carlson.

Source/WebCore:

In case MediaPlayer is an audio element, we should just make it as if there is no video track in the stream.

Test: imported/w3c/web-platform-tests/webrtc/audio-video-element-playing.html

* platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.h:
* platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaStreamAVFObjC::enqueueVideoSample):
(WebCore::MediaPlayerPrivateMediaStreamAVFObjC::ensureLayers):
(WebCore::MediaPlayerPrivateMediaStreamAVFObjC::activeVideoTrack const):
(WebCore::MediaPlayerPrivateMediaStreamAVFObjC::didPassCORSAccessCheck const):
(WebCore::MediaPlayerPrivateMediaStreamAVFObjC::currentDisplayMode const):
(WebCore::MediaPlayerPrivateMediaStreamAVFObjC::currentReadyState):
(WebCore::MediaPlayerPrivateMediaStreamAVFObjC::checkSelectedVideoTrack):
(WebCore::MediaPlayerPrivateMediaStreamAVFObjC::updateTracks):

LayoutTests:

* webrtc/audio-video-element-playing-expected.txt: Added.
* webrtc/audio-video-element-playing.html: Added.


Canonical link: https://commits.webkit.org/222045@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258503 268f45cc-cd09-0410-ab3c-d52691b4dbfc